# sknife

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
benches/: RESULT.md  collections_flatmap.rs  collections_map.rs  collections_reduce.rs
examples/collections/: Cargo.toml
examples/collections/src/: main.rs
src/: any.rs  find.rs  find_keys.rs  lib.rs  map.rs
src/collection/: any.rs  count.rs  find.rs  flatmap.rs  map.rs  mod.rs  reduce.rs  zip.rs
tests/: collections_any.rs  collections_find.rs
