[package]
name = "sknife"
version = "0.2.0"
authors = ["Aditya Pratap Singh <adisinghrajput@gmail.com>"]
license = "MIT"
description = "Swiss knife for common rust functional utilities"
readme = "README.md"
homepage = "https://github.com/addityasingh/sknife"
exclude = [
    "public/assets/*",
    "videos/*",
]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
